--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+easy_room_app:
+    resource: "@EasyRoomAppBundle/Resources/config/routing.yml"
+    prefix:   /
+
 easy_room_test:
     resource: "@EasyRoomTestBundle/Resources/config/routing.yml"
     prefix:   /
