--- a/src/EasyRoom/AppBundle/Resources/public/package.json
+++ b/src/EasyRoom/AppBundle/Resources/public/package.json
@@ -12,5 +12,8 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "uniq": "^1.0.1"
+  },
+  "dependencies": {
+    "materialize-clockpicker": "^1.0.1"
   }
 }
