--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,5 @@ easy_room_app:
     resource: "@EasyRoomAppBundle/Resources/config/routing.yml"
     prefix:   /
 
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
