--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,6 +39,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    form_themes:
+        - 'bootstrap_3_layout.html.twig'
 
 # Doctrine Configuration
 doctrine:
@@ -79,9 +81,9 @@ fos_user:
         sender_name: "%mailer_user%"
     registration:
         form:
-            type: EasyRoom\AppBundle\Form\RegistrationType
+            type: EasyRoom\UserBundle\Form\RegistrationType
             validation_groups: [EasyroomRegistration]
     profile:
         form:
-            type: EasyRoom\AppBundle\Form\RegistrationType
+            type: EasyRoom\UserBundle\Form\RegistrationType
             validation_groups: [EasyroomProfile]
