--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,9 +38,9 @@ framework:
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
+    strict_variables: "%kernel.debug%"    
     form_themes:
-        - 'bootstrap_3_layout.html.twig'
+        - 'EasyRoomAppBundle:Form:fields.html.twig'
 
 # Doctrine Configuration
 doctrine:
