Ajouter une salle : initialisaiton de l'écran
Définition du Formulaire Salle
Surcharge de l'élément Input File

--- a/src/EasyRoom/AppBundle/Resources/config/routing.yml
+++ b/src/EasyRoom/AppBundle/Resources/config/routing.yml
@@ -23,7 +23,7 @@ easy_room_app_salle_delete:
     defaults: { _controller: EasyRoomAppBundle:Salle:delete }
 
 easy_room_app_salle_fiche:
-    path:     /salle/{idSalle}
+    path:     /salle/fiche/{idSalle}
     defaults: { _controller: EasyRoomAppBundle:Salle:show }
 
 easy_room_app_salle_search:
